Changelog
=========


2.3.2 (unreleased)
------------------

- Nothing changed yet.


2.3.1 (2014-10-20)
------------------

- Don't show action menu when neither actions nor workflow transitions available.
  [deif]


2.3.0 (2014-03-03)
------------------

- Show extra factory menu items for parent of default page.
  [maurits]


2.2.2 (2013-08-26)
------------------

- Remove permissioncheck for workflowaction 'advanced'
  [elioschmutz]

- Sort folder_factories-actions in factories menu translated in Plone domain.
  [jone]


2.2.1 (2013-04-16)
------------------

- onegov.ch approved: add badge to readme.
  [jone]


2.2 (2012-11-28)
----------------

- Fixed actionmenuItems getter to avoid double entries of
  type_tool actions.
  [phgross]

- Use plone.app.testing instead of collective.testcaselayer.
  [buchi]

- Improved performance by optimizing availability checks and the way the
  actions and factories menus get their items.
  [buchi]


2.1 (2012-03-13)
----------------

- Replaced all overrides with more specific adapters for our browser layer.
  [buchi]

- Make ftw.contentmenu behave more like default Plone by removing the
  ftw.contentviews viewlet and using the default plone.contentviews and
  plone.contentactions viewlets instead. There's an upgrade step to unhide
  default viewlets and to remove custom css.
  [buchi]


2.0.3 (2012-02-28)
------------------

- Fixed specific plone.contentmenu.factories adapter:
  Add check if _addingToParent, works now also for non-folderish types.
  [phgross]


2.0.2 (2012-02-28)
------------------

- Adjsut MANIFEST.in: Add include for rst files.
  [phgross]


2.0.1 (2012-02-27)
------------------

- Added some french translations
  [ttschanz]

- Added a specific plone.contentmenu.factories adapter, which makes the menu only
  available, when some action items really exists in the menu item.
  [phgross]


2.0 (2011-11-17)
----------------

- Use zope.i18n for translations.
  [eschmutz]
