@@ -5,7 +5,8 @@ Changelog
 2.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add plone.protect 3.0 "auto" support: automatically add token to transition actions.
+  [jone]
 
 
 2.3.1 (2014-10-20)
